# test_newman

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
endpoints/: create_user.py  get_user.py
models/: error_response.py  user.py
security/: dependencies.py
settings/: config.py
storage/: data.py
tests/: simple_app.postman_collection.json  simple_app_env.postman_environment.json
tests/collection/: simple_app.postman_collection.json
tests/endpoints/create_user/: invalid.json  test_data.json  valid.json
tests/endpoints/get_user/: invalid.json  valid.json
tests/envs/: simple_app_env.postman_environment.json  tmp_env.json
tests/reports/: create_user.html  create_user.junit.xml  get_user.html  get_user.junit.xml
tests/scenarios/: create_user_test_data.json  get_user_test_data.json
