[tool.poetry]
name = "test-newman"
version = "0.1.0"
description = ""
authors = ["DAS <garsiamarkes111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
pydantic-extra-types = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
